test/spec_vectors/memory/fail/module_24.wat
(module (memory 0 2147483648))